# 2603_ds_ft_thebridge

./: README.md
1-Fundamentals/Python/0-Markdown/: Ejercicios markdown.ipynb
1-Fundamentals/Python/1-Basics/: Ejercicios Python Basics II.ipynb  test.py
1-Fundamentals/Python/2-Flujos de control/: Ejercicios Flujos de Control.ipynb  (+1 more)
2-Analytics/1-Numpy/: 1_Numpy - VACÍO.ipynb  Ejercicios Numpy I.ipynb  Ejercicios Numpy II.ipynb
2-Analytics/10-RegEx/: Ejercicios_RegEx_SOLUCION.ipynb  Ejercicios_RegEx_VACIO.ipynb
2-Analytics/2-Pandas/: 1_Introducing-Pandas-Objects.ipynb
2-Analytics/4-uv/: uv_y_paquetes_de_python.ipynb
2-Analytics/4-uv/proyect-pablo-library/src/proyect-pablo-library/: pyproject.toml
2-Analytics/4-uv/proyect-pablo-library/src/proyect-pablo-library/src/proyect_pablo_library/: __init__.py  main.py  pablo_utils.py
2-Analytics/4-uv/proyecto_uv_pablo/: pyproject.toml
2-Analytics/4-uv/proyecto_uv_pablo/src/: __init__.py  main.py  your_report.html
2-Analytics/4-uv/proyecto_uv_pablo/src/my_package/: __init__.py
2-Analytics/4-uv/proyecto_uv_pablo/src/project_pablo_library/: main.py
2-Analytics/8-Matplotlib/: ejercicios_Matplotlib.ipynb
2-Analytics/Hundir-la-flota/: Battleship.ipynb  Battleship_Test_Manual_V2_Class_Hard.py  Battleship_Test_Manual_V3_Class_Hard.py  Battleship_V6_class.py  Battleship_V7_class.py  Consejos_hlf.ipynb  Hundirlaflota.ipynb  main.pyw
3-Machine Learning/EXTRA Feature Importance/: Seleccion_Features_SOL.ipynb
4-Deep_Learning/3-Transfer Learning/: Ejercicios_Transfer_Learning_Practico_SOL_09052026.ipynb
(+76 files in other folders)
