[project]
name = "proyecto-uv-pablo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "setuptools<81",
    "ydata-profiling>=4.18.1",
]

[tool.uv.workspace]
members = [
    "project-pablo-library",
]

[tool.setuptools.packages.find]
where = ["./"]
include = ["src"]

[project.scripts]
"start" = "main:start"